<resources>
    <string name="app_name">Simon Dice</string>
    <string name="btn_start">Jugar</string>
    <string name="btn_instructions">Instrucciones</string>
    <string name="btn_settings">Configuración</string>
    <string name="welcome_title">¡Bienvenido a Simon Dice!</string>

    <!-- GameFragment -->
    <string name="game_time_label">Tiempo: %1$d</string>
    <string name="game_score_label">Puntos: %1$d</string>
    <string name="color_rojo">Rojo</string>
    <string name="color_azul">Azul</string>
    <string name="color_verde">Verde</string>
    <string name="color_amarillo">Amarillo</string>
    <string name="color_naranja">Naranja</string>
    <string name="color_morado">Morado</string>

    <!-- Resultados y navegación -->
    <string name="resultado_ganaste">¡Ganaste!</string>
    <string name="resultado_perdiste">¡Perdiste!</string>
    <string name="volver_al_menu">Volver al menú</string>

    <string name="resultado_placeholder">Resultado</string>
    <string name="puntaje_label">Puntaje: %1$d</string>
    <string name="puntaje_alto_label">Puntaje más alto: %1$d</string>
    <string name="nuevo_record">¡Nuevo récord!</string>
    <string name="restart_game">Reiniciar</string>

    <!-- SettingsFragment con sus Strings-->
    <string name="settings_title">Configuración</string>
    <string name="sound_label">Activar sonido</string>
    <string name="back">Volver</string>

</resources>